cluster/apps/default/radarr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: radarr
spec:
  replicas: 1
  revisionHistoryLimit: 0
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app.kubernetes.io/name: radarr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: radarr
    spec:
      containers:
      - name: radarr
        image: lscr.io/linuxserver/radarr:4.1.0 # {"$imagepolicy": "flux-system:radarr"}
        ports:
        - containerPort: 7878
        readinessProbe:
          httpGet:
            path: /settings
            port: 7878
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /settings
            port: 7878
          initialDelaySeconds: 60
          timeoutSeconds: 10
          failureThreshold: 3
        volumeMounts:
        - mountPath: /config
          name: config-volume
        - mountPath: /media
          name: media-volume
      volumes:
      - name: config-volume
        persistentVolumeClaim:
          claimName: radarr-config
      - name: media-volume
        nfs:
          server: sc01.${SECRET_PRIVATE_DOMAIN}
          path: /mnt/dpool/media
