cluster/apps/default/radarr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: radarr
spec:
  ports:
    - port: 7878
  selector:
    app.kubernetes.io/name: radarr
